--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,16 @@
     font-family: 'Gotham', sans-serif;
     margin: 0;
     padding: 0;
+
+}
+
+/*Bootstrap pone 1rem en este valor y rompe el footer.*/
+p{
+    margin-bottom: 0;
 }
 
 /* Empieza el header */
+
 
 .navegaciondesktop{
     padding-top: 20px;
@@ -60,6 +67,7 @@ nav {
 
 /*Etiquetas GENERALES para el body*/
 body {
+    line-height: 1.3;
     margin: 0;
     display: inline;
     background-color: #9F7E69;
