--- a/css/styles.css
+++ b/css/styles.css
@@ -42,23 +42,22 @@ header a:hover{
 header a {
     font-family: 'Gotham Light', sans-serif;
     color: black;
-    font-size: 20px;
+    margin-top: 5px;
+    font-size: 25px;
     text-decoration: none;
 }
 ul {
-    width: 100%;
-    display: inline-flex;
-    justify-content: flex-end;
+    margin-left: 120px;
 }
-li {
+/* li {
     list-style: none;
     margin: 10px 0px 0px 0px;
     border: 2px solid #A68C6D;
-}
+} */
 nav {
-    height: 65px;
-    width: 96%;
-}
+    background: rgb(235,220,203);
+    background: linear-gradient(90deg, rgba(235,220,203,1) 14%, rgba(195,186,170,1) 53%, rgba(210,187,160,1) 91%);
+} 
 
 /* Termina el header */
 
