Más avances con el pase del código a SASS

--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ iframe {
     text-align: center;
 }
 .carousel-control-prev-icon{
-    margin-left: 260px;
+    left: 500px;
 }
 
 /* Contacto.html */
