--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -171,4 +171,145 @@ iframe {
 .nosotros h4 {
   margin-top: 25px;
   text-align: center;
+}
+
+/* Contacto.html */
+form h4 {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+/* Empieza el footer*/
+.redesmobile {
+  display: none;
+}
+
+footer {
+  display: block;
+  background-color: #F2EFC7;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 170px;
+}
+
+.arribafooter {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.arribafooter h1 {
+  font-family: "Gotham Black", sans-serif;
+  display: flex;
+  margin-left: 7px;
+}
+.arribafooter span {
+  font-family: "Gotham Black", sans-serif;
+  color: #D81F02;
+}
+.arribafooter p {
+  font-family: "Gotham Book", sans-serif;
+  margin-right: 20px;
+}
+
+.redes {
+  padding-left: 83px;
+  display: flex;
+  text-decoration: none;
+}
+.redes a {
+  border: 2px solid #333;
+}
+.redes a:hover {
+  transform: scale(1.2);
+  transition: 1s;
+}
+
+.sucursalesfooter {
+  margin-top: 5px;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+}
+
+/* Base del menú hamburger para celulares */
+.hambugermobile {
+  display: none;
+}
+
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background: rgb(235, 220, 203);
+  background: linear-gradient(90deg, rgb(235, 220, 203) 14%, rgb(195, 186, 170) 53%, rgb(210, 187, 160) 91%);
+  color: #FFF;
+  height: 50px;
+  padding: 1em;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu > li {
+  margin: 0 1rem;
+  overflow: hidden;
+}
+
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: #fff;
+  position: absolute;
+  height: 4px;
+  width: 30px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 2px;
+}
+
+.menu-button::before {
+  content: "";
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: "";
+  margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
 }/*# sourceMappingURL=estilos.css.map */
