--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -124,10 +124,9 @@ iframe {
   padding-right: 20px;
   display: flex;
   border-bottom: 2px solid black;
-  margin-bottom: 120px;
 }
 
-/* La última ID SIEMPRE va a tener que tener un margin-bottom de 120 PX. */
+/* Dependiendo de cual sea la última ID, hay que cambiarle el # a este if para el margin bottom */
 .textoizq {
   text-align: left;
   margin-right: 20px;
@@ -312,4 +311,547 @@ footer {
 #menu-toggle:checked + .menu-button-container .menu-button::after {
   margin-top: 0px;
   transform: rotate(-405deg);
+}
+
+/* Menú hamburger a partir de los 1023PX*/
+@media only screen and (max-width: 1023px) {
+  .navbar {
+    display: none;
+  }
+  *, ::after, ::before {
+    box-sizing: unset;
+  }
+  .hambugermobile {
+    display: block;
+  }
+  .hambugermobile h1 {
+    padding-top: 5px;
+    color: #222;
+  }
+  .menu-button-container {
+    left: 0;
+    display: flex;
+  }
+  .menu {
+    position: absolute;
+    top: 0;
+    margin-top: 80px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  #menu-toggle ~ .menu li {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  #menu-toggle:checked ~ .menu li {
+    border: 1px solid #333;
+    height: 2.5em;
+    padding: 0.5em;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  .menu > li {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0.5em 0;
+    width: 100%;
+    color: white;
+    background-color: #222;
+  }
+  .menu > li:not(:last-child) {
+    border-bottom: 1px solid #444;
+  }
+  li a {
+    margin-top: 8px;
+    color: white;
+  }
+}
+/* Responsive */
+@media only screen and (min-width: 1360px) and (max-width: 1800px) {
+  .redes h1 {
+    margin-right: 35%;
+  }
+  .redes p {
+    margin-top: 10px;
+    margin-left: 27%;
+  }
+  #lena img {
+    margin-bottom: 120px;
+  }
+  iframe {
+    width: 600px;
+    height: 400px;
+    margin-right: 10px;
+  }
+  .sucursales {
+    margin-top: 25px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    margin-left: 10px;
+    padding-bottom: 180px;
+  }
+  .sucursalmendoza {
+    padding-top: 10px;
+  }
+  .columnas {
+    padding-bottom: 50px;
+  }
+  .carousel-caption {
+    display: none !important;
+  }
+  .carousel-inner {
+    margin-bottom: 300px;
+  }
+}
+@media only screen and (min-width: 1024px) and (max-width: 1359px) {
+  .sucursalesfooter {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+  .sucur3 {
+    display: none;
+  }
+  iframe {
+    width: 480px;
+    height: 300px;
+    margin-right: 10px;
+  }
+  .sucursales {
+    margin-top: 25px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    margin-left: 10px;
+    padding-bottom: 180px;
+  }
+  .sucursalmendoza {
+    padding-top: 10px;
+  }
+  .columnas {
+    padding-bottom: 150px;
+  }
+  .carousel-caption {
+    display: none !important;
+  }
+  .carousel-inner {
+    margin-bottom: 200px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  footer {
+    position: fixed;
+  }
+  h1 {
+    font-size: 35px;
+  }
+  h3 {
+    font-size: large;
+  }
+  .form-control {
+    margin-left: 10px;
+    width: 95%;
+  }
+  .sucursalesfooter {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+  .sucur3 {
+    display: none;
+  }
+  .menu {
+    width: 98.9%;
+  }
+  #lena {
+    padding-bottom: 160px;
+  }
+  .carousel-caption {
+    display: none !important;
+  }
+  .carousel-inner {
+    margin-bottom: 200px;
+  }
+  iframe {
+    width: 480px;
+    height: 300px;
+    margin-right: 10px;
+  }
+  .sucursales {
+    margin-top: 25px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    text-align: center;
+    margin-left: 10px;
+    padding-bottom: 180px;
+  }
+  .sucursalcordoba {
+    padding-top: 10px;
+  }
+  .sucursalmendoza {
+    padding-top: 10px;
+  }
+}
+@media only screen and (min-width: 600px) and (max-width: 767px) {
+  footer {
+    height: 140px;
+  }
+  nav {
+    width: 20px;
+    height: 20px;
+  }
+  h1 {
+    font-size: 35px;
+  }
+  h3 {
+    font-size: large;
+  }
+  .carousel-caption {
+    display: none !important;
+  }
+  .carousel-inner {
+    margin-bottom: 150px;
+  }
+  .form-control {
+    margin-left: 14px;
+    width: 93%;
+  }
+  .sucursalesfooter {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .sucur2, .sucur3 {
+    display: none;
+  }
+  .menu > li {
+    width: 97%;
+  }
+  .textoder {
+    padding-bottom: 120px;
+  }
+  .columnas img {
+    width: 300px;
+    height: 250px;
+  }
+  .nosotros img {
+    width: 400px;
+    height: 300px;
+  }
+  iframe {
+    width: 480px;
+    height: 300px;
+    margin-right: 10px;
+  }
+  .sucursales {
+    margin-top: 25px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    text-align: center;
+    margin-left: 10px;
+    padding-bottom: 180px;
+  }
+  .sucursalcordoba {
+    padding-top: 10px;
+  }
+  .sucursalmendoza {
+    padding-top: 10px;
+  }
+  .redes {
+    display: none;
+  }
+  .redesmobile {
+    padding-left: 83px;
+    display: flex;
+    text-decoration: none;
+  }
+  .redesmobile a {
+    border: 2px solid #333;
+    width: 32px;
+    height: 30px;
+  }
+  .redesmobile a:hover {
+    transform: scale(1.2);
+    transition: 1s;
+  }
+}
+@media only screen and (min-width: 480px) and (max-width: 599px) {
+  header {
+    width: 100%;
+  }
+  footer {
+    height: 120px;
+  }
+  .sucursalesfooter {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .sucur2, .sucur3 {
+    display: none;
+  }
+  .form-control {
+    margin-left: 14px;
+    width: 90%;
+  }
+  .carousel-caption {
+    display: none !important;
+  }
+  .carousel-inner {
+    margin-bottom: 140px;
+  }
+  .nosotros img {
+    width: 250px;
+    height: 300px;
+  }
+  /* Si se hacen cambios al width, hacerlo con vh. Por alguna razón
+  conocida solo por css rompe el footer con px*/
+  .menu {
+    margin-top: 77px;
+    width: 78vh;
+  }
+  h1 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: medium;
+  }
+  .columnas {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .columnas img {
+    display: block;
+  }
+  .imgmobile {
+    display: block;
+  }
+  .imgdesktop {
+    display: none;
+  }
+  iframe {
+    width: 400px;
+    height: 300px;
+    margin-right: 10px;
+  }
+  .sucursales {
+    margin-top: 10px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    text-align: center;
+    margin-left: 10px;
+    padding-bottom: 180px;
+  }
+  .sucursalcordoba {
+    padding-top: 10px;
+  }
+  .sucursalmendoza {
+    padding-top: 10px;
+  }
+  .textoder, .textoizq {
+    padding-right: 10px;
+  }
+  /* Posible @EACH para todos los animales*/
+  /* Plantilla para número impar */
+  #lena {
+    display: block;
+  }
+  #lena img {
+    padding-bottom: 20px;
+    padding-left: 17px;
+    width: 410px;
+    height: 350px;
+  }
+  /* Plantilla para número par */
+  #roger {
+    display: block;
+  }
+  #roger img {
+    padding-bottom: 20px;
+    padding-left: 17px;
+    width: 410px;
+    height: 350px;
+  }
+  #killi {
+    display: block;
+  }
+  #killi img {
+    padding-bottom: 20px;
+    padding-left: 17px;
+    width: 410px;
+    height: 350px;
+  }
+  #ganga {
+    display: block;
+  }
+  #ganga img {
+    padding-bottom: 20px;
+    padding-left: 17px;
+    width: 410px;
+    height: 350px;
+  }
+  .textoder {
+    margin-top: 20px;
+    padding-bottom: 100px;
+  }
+  .redes {
+    display: none;
+  }
+  .redesmobile {
+    padding-left: 83px;
+    display: flex;
+    text-decoration: none;
+  }
+  .redesmobile a {
+    border: 2px solid #333;
+    width: 26px;
+    height: 26px;
+  }
+  .redesmobile a:hover {
+    transform: scale(1.1);
+    transition: 1s;
+  }
+  .arribafooter p {
+    padding-right: 10px;
+  }
+  .columnas {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .columnas img {
+    width: 300px;
+    height: 200px;
+  }
+}
+@media only screen and (min-width: 320px) and (max-width: 479px) {
+  header {
+    width: 100%;
+  }
+  .presentacion {
+    padding-right: 13px;
+  }
+  h1 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: medium;
+  }
+  body {
+    font-size: small;
+  }
+  .columnas {
+    padding-bottom: 120px;
+  }
+  #lena {
+    display: block;
+  }
+  .carousel-caption {
+    display: none !important;
+  }
+  .carousel-inner {
+    margin-bottom: 150px;
+  }
+  .nosotros img {
+    width: 250px;
+    height: 300px;
+  }
+  iframe {
+    width: 300px;
+    height: 200px;
+    margin-right: 10px;
+  }
+  .sucursales {
+    margin-top: 10px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    text-align: center;
+    margin-left: 10px;
+    padding-bottom: 180px;
+  }
+  .sucursalcordoba {
+    padding-top: 10px;
+  }
+  .sucursalmendoza {
+    padding-top: 10px;
+  }
+  .form-control {
+    margin-left: 10px;
+    width: 87%;
+  }
+  /* Plantilla para número impar */
+  /* Otra posibilidad de @EACH */
+  #lena {
+    display: block;
+  }
+  #lena img {
+    padding-left: 13px;
+    width: 260px;
+    height: 250px;
+  }
+  /* Plantilla para número par */
+  #roger {
+    display: block;
+  }
+  #roger img {
+    padding-left: 30px;
+    width: 260px;
+    height: 250px;
+  }
+  #killi {
+    display: block;
+  }
+  #killi img {
+    padding-left: 13px;
+    width: 260px;
+    height: 250px;
+  }
+  #ganga {
+    display: block;
+  }
+  #ganga img {
+    padding-left: 30px;
+    width: 260px;
+    height: 250px;
+  }
+  footer {
+    height: 140px;
+  }
+  .redes {
+    display: none;
+  }
+  .redesmobile {
+    padding-left: 25px;
+    padding-right: 25px;
+    display: flex;
+    text-decoration: none;
+  }
+  .redesmobile a {
+    border: 2px solid #333;
+    margin-left: 4px;
+    width: 24px;
+    height: 25px;
+  }
+  .redesmobile a:hover {
+    transform: scale(1.2);
+    transition: 1s;
+  }
+  .arribafooter p {
+    padding-right: 10px;
+  }
+  .sucursalesfooter {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .sucur2, .sucur3 {
+    display: none;
+  }
 }/*# sourceMappingURL=estilos.css.map */
