--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -14,6 +14,30 @@ $colorbody: #9F7E69;
     padding: 0;
 }
 
+$colores: (
+    colorbody: #9F7E69,
+    colorfooter: #F2EFC7,
+);
+
+/* Gato con la foto en la izq. */
+
+@mixin gato-izq{
+    padding-left: 18px;
+    padding-bottom: 18px;
+    display: flex;
+    border-bottom: 2px solid #333;
+}
+
+/* Gato con la foto en la der. */
+
+@mixin gato-der{
+    padding-bottom: 18px;
+    padding-right: 20px;
+    display: flex;
+    border-bottom: 2px solid #333;
+}
+
+
 /* Para que el footer no rompa con la implementación de bootstrap, este margin 0 tiene que estar si o si*/
 
 p{
@@ -70,7 +94,7 @@ nav{
 body{
     line-height: 1.3;
     display: inline;
-    background-color: $colorbody;
+    background-color: map-get($colores, colorbody);
 
     h2{
         text-align: center;
@@ -122,44 +146,22 @@ iframe {
 
 /* Animales.html */
 
-
-/* Gato con la foto en la izq. */
-
 #lena{
     margin-top: 20px;
-    padding-left: 18px;
-    padding-bottom: 18px;
-    display: flex;
-    border-bottom: 2px solid #333;
+    @include gato-izq;
 }
 
-/* Gato con la foto en la der. */
-
 #roger{
-    padding-bottom: 18px;
-    padding-right: 20px;
-    display: flex;
-    border-bottom: 2px solid #333;
+    @include gato-der;
 }
 
 #killi{
-    padding-bottom: 18px;
-    padding-left: 18px;
-    display: flex;
-    border-bottom: 2px solid black;
+    @include gato-izq;
 }
 
 #ganga{
-    padding-bottom: 18px;
-    padding-right: 20px;
-    display: flex;
-    border-bottom: 2px solid black;
+    @include gato-der;
 }
-
-
-/* Dependiendo de cual sea la última ID, hay que cambiarle el # a este if para el margin bottom */
-
-
 
 .textoizq{
     text-align: left;
@@ -225,7 +227,7 @@ form{
 
 footer {
     display: block;
-    background-color: #F2EFC7;
+    background-color: map-get($colores, colorfooter);
     position: fixed;
     bottom: 0;
     width: 100%;
