--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -205,9 +205,10 @@ iframe {
         margin-left: auto;
         margin-right: auto;
     }
-    h4{
+    h3{
         margin-top: 25px;
-        text-align: center;
+        margin-left: 20px;
+        text-align: left;
     }
 }
 
