Agrego contenido de texto real a la página web

--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -93,7 +93,8 @@ iframe {
 
 /* Index.html */
 .presentacion h3 {
-  margin-left: 20px;
+  text-align: center;
+  margin-left: 10px;
 }
 
 /* Animales.html */
