--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -140,7 +140,8 @@ iframe {
 
 .presentacion{
     h3{
-        margin-left: 20px;
+        text-align: center;
+        margin-left: 10px;
     }
 }
 
