--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -230,12 +230,19 @@ iframe {
 
 
 /* Contacto.html */
-
+.btn{
+    padding: 0.93em 20px;
+}
+.form-group{
+    margin-bottom: 25px;
+    margin-top: 30px;
+    width: 1200px;
+}
 form{
     h4{
         text-align: center;
         padding-top: 10px;
-        padding-bottom: 10px;
+        padding-bottom: 50px;
     }
 }
 
