--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -233,6 +233,11 @@ iframe {
 .btn{
     padding: 0.93em 20px;
 }
+button{
+    span{
+        font-size: large;
+    }
+}
 .form-group{
     margin-bottom: 25px;
     margin-top: 30px;
