--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -19,6 +19,7 @@ header img {
   margin-left: 7px;
 }
 header h1 {
+  color: #333;
   font-family: "Gotham Black", sans-serif;
   display: inline-flex;
   position: absolute;
@@ -37,7 +38,7 @@ header a {
 }
 header a:hover {
   background-color: #A68C6D;
-  transition: 0, 8s;
+  transition: 0.8s;
 }
 
 ul {
@@ -93,6 +94,10 @@ iframe {
 /* Index.html */
 #carouselExampleIndicators h4 {
   margin-top: 40px;
+}
+
+.carousel-caption h5, .carousel-caption p {
+  text-shadow: 0 0 8px #222;
 }
 
 .carousel-inner img {
@@ -207,12 +212,6 @@ button span {
   width: 1200px;
 }
 
-form h4 {
-  text-align: center;
-  padding-top: 10px;
-  padding-bottom: 50px;
-}
-
 /* Footer */
 .redesmobile {
   display: none;
@@ -250,6 +249,9 @@ footer {
   padding-left: 83px;
   display: flex;
   text-decoration: none;
+}
+.redes a {
+  margin-left: 5px;
 }
 .redes a:hover {
   transform: scale(1.2);
@@ -616,7 +618,7 @@ footer {
     height: 10px;
   }
   .redesmobile a:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition: 1s;
   }
 }
