--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -55,6 +55,7 @@ header{
     }
 
     h1{
+        color: #333;
         font-family: $fuenteheader;
         display: inline-flex;
         position: absolute;
@@ -76,7 +77,7 @@ header{
 
     a:hover{
         background-color: #A68C6D;
-        transition: 0,8s;
+        transition: 0.8s;
     }
 }
 
@@ -140,6 +141,11 @@ iframe {
 #carouselExampleIndicators{
     h4{
         margin-top: 40px;
+    }
+}
+.carousel-caption{
+    h5, p{
+        text-shadow: 0 0 8px #222;
     }
 }
 .carousel-inner{
@@ -243,13 +249,6 @@ button{
     margin-top: 30px;
     width: 1200px;
 }
-form{
-    h4{
-        text-align: center;
-        padding-top: 10px;
-        padding-bottom: 50px;
-    }
-}
 
 /* Footer */
 
@@ -296,6 +295,9 @@ footer {
     display: flex;
     text-decoration:none;
 
+    a{
+        margin-left: 5px;
+    }
     a:hover{
         transform: scale(1.2);
         transition: 1s;
@@ -679,7 +681,7 @@ footer {
                 width: 32px; height: 10px;
             }
             a:hover{
-                transform: scale(1.2);
+                transform: scale(1.1);
                 transition: 1s;
             }
         }
